@@ -30,10 +30,9 @@ To Do:
 - add default scanners for biggest % gainers, new 52 week highs etc.
 - add some descriptive text to the upgrade window
 - add more flexible symbol and directory selector for the yahoo plugin.
-- fix: need to add an exchange field to the index.
 - add ExScript CUS interface for indicators and plots.
 - remove full paths from all files, only symbol is needed for index lookup
-
+- change yahoo plugin to get fundamentals on new charts automatically 
 
 
 Maybe some day:
