@@ -24,6 +24,7 @@
 #include "HelpWindow.h"
 #include "DBIndexItem.h"
 #include "COBase.h"
+#include "Exchange.h"
 #include <qlabel.h>
 #include <qlayout.h>
 #include <qmessagebox.h>
@@ -95,6 +96,8 @@ void StocksDialog::createDetailsPage ()
   grid->addWidget(label, 2, 0);
 
   item.getExchange(s);  
+  Exchange ex;
+  ex.getExchange(s.toInt(), s);
   label = new QLabel(s, w);
   label->setFrameStyle(QFrame::WinPanel | QFrame::Sunken);
   grid->addWidget(label, 2, 1);
