@@ -174,5 +174,7 @@
           
 20070108: Applied patch #1630165 - chartobjects.html - thanks to loh_tar for the patch.
 
+20070109: Added an exchange field to charts.
+
 
 
